bin_PROGRAMS = dv_ap
dv_ap_SOURCES = main.c dv_utils.c from_node.c send_inet.c from_inet.c handler.c send_node.c init.c print_PICinfo.c read_config.c reply_busy.c send_resp.c node_usb_init.c dvap.c aprs.c beacon.c pass_send.c crc.c gps.c gps_a.c send_check.c httpd_srv.c \
IDxxPlus.c upnp.c \
echo_server.c status.c aprs2dstar.c \
dstar.h node.h crc.h dprs_symbol.h dv_ap.h config.h
dv_ap_LIBS = -lusb  -lcrypto
